checking workaround for kotlin maven plugin issue